--- a/tutorial-part-four/package.json
+++ b/tutorial-part-four/package.json
@@ -16,6 +16,7 @@
     "gatsby": "^2.0.112",
     "gatsby-plugin-emotion": "^4.0.3",
     "gatsby-plugin-typography": "^2.2.7",
+    "gatsby-source-filesystem": "^2.0.20",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-typography": "^0.16.18",
