--- a/tutorial-part-four/package.json
+++ b/tutorial-part-four/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-emotion": "^4.0.3",
     "gatsby-plugin-typography": "^2.2.7",
     "gatsby-source-filesystem": "^2.0.20",
+    "gatsby-transformer-remark": "^2.2.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-typography": "^0.16.18",
